# rcompat-lbfgsb

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  PROVENANCE.md  README.md
.github/workflows/: ci.yml
examples/: maximize_with_negative_fnscale.rs  quadratic.rs  rosenbrock.rs
fixtures/deseq_hard_real_subset/: README.md  optim_cases.json
fixtures/deseq_real_subset/: README.md  coefficients_long.tsv  counts.tsv  design_matrix.tsv  gene_cases.tsv  optim_cases.json  reference_results.tsv  sample_metadata.tsv  size_factors.tsv
fixtures/r_optim_lbfgsb/: README.md  active_bounds.json  active_upper_bound.json  all_fixed_2d.json  all_unbounded_2d_quadratic.json  all_unbounded_finite_difference_2d.json  factr_loose_2d_quadratic.json  factr_loose_rosenbrock.json  factr_zero_2d_quadratic.json  factr_zero_quadratic.json  finite_difference.json  first_constrained_linear_2d.json  fixed_free_2d.json  fixed_no_gradient_error.json  fixed_parameter.json  fnscale.json  fnscale_parscale_finite_difference_2d.json  fnscale_parscale_gradient_2d.json  initial_neg_inf_projected.json  initial_outside_bounds.json  initial_pos_inf_projected.json  maxit.json  (+42 more)
scripts/: check_no_forbidden_sources.sh  generate_hard_real_fixtures.R  generate_r_fixtures.R  trace_hard_real_case.R
src/: bounds.rs  compat.rs  control.rs  error.rs  finite_diff.rs  lib.rs  objective.rs  result.rs  scaling.rs
tests/: api_smoke.rs  bounds.rs  deseq_hard_real_subset.rs  deseq_real_subset.rs  finite_diff.rs  hard_real_bundle_scan.rs  parity_fixtures.rs  quadratic.rs  scaling.rs  synthetic_stress_scan.rs
(+4 files in other folders)
